Fix page width exceeding screen width for small devices. Skill list items appear one per line on small devices.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* CSS reset */
 html {
     box-sizing: border-box;
+    max-width: 100vw;
 }
 
 body,
@@ -168,6 +169,10 @@ section {
     margin-bottom: 2rem;
 }
 
+.skill-wrapper {
+    display: inline-block;
+}
+
 .project {
     position: relative;
     overflow: hidden;
@@ -256,7 +261,7 @@ section {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.9);
     color: white;
@@ -397,7 +402,7 @@ h6 {
 }
 
 /* Responsive design */
-@media (max-width: 1280px) {
+@media (max-width: 1024px) {
     main {
         padding: 0 10%;
     }
@@ -439,5 +444,9 @@ h6 {
 
     .project-description-hidden {
         visibility: visible;
+    }
+
+    .skill-wrapper {
+        display: block;
     }
 }
